Added sign out option, code cleanup.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,4 +6,9 @@
   --bg-main: #131029;
   --bg-dark-main: #262054;
   --light-main: #4d56a6;
+  --hover: #1a1638;
+}
+
+html {
+  background-color: var(--bg-main);
 }
