--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --bg-main: #131029;
-  --bg-dark-main: #262054;
+  --bg-dark-main: #332b70;
   --light-main: #4d56a6;
   --hover: #1a1638;
   --accent: #262056;
